# gfa2network

./: .gitignore  CHANGELOG.md  GFA2Network.py  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
gfa2network/: __init__.py  analysis.py  builders.py  cli.py  igraph_builder.py  parser.py  utils.py
scripts/: lint_check.sh
tests/: bench_distance.py  test_bidirected.py  test_cli_convert.py  test_distance.py  test_distance_warning.py  test_export_edge_list.py  test_export_formats.py  test_igraph_backend.py  test_igraph_builder.py  test_large_graph.py  test_limits.py  test_matrix_asym.py  test_matrix_dtype.py  test_matrix_nodes_map.py  test_parser.py  test_sequence_duplicates.py  test_split_alignment.py  test_store_seq.py  test_store_tags.py  test_verbose_timing.py  test_walk_records.py  test_warnings.py
