[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gfa2network"
version = "0.3.0"
description = "Convert GFA pangenome graphs to NetworkX graphs or SciPy matrices"
authors = [{name = "John Doe", email = "john.doe@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "networkx",
    "scipy",
    "numpy",
]


[project.optional-dependencies]
tqdm = ["tqdm"]

[project.scripts]
gfa2network = "gfa2network.cli:main"
